# CodingDojo

./: .bazelrc  .gitignore  CodingDojo.bazelproject  README.md  WORKSPACE
AlgorithmsAndDataStructures/: 02_recursion_static_variables.cpp  09_recursion_taylor_series.cpp  BUILD.bazel  main.cpp
AlgorithmsAndDataStructures/Array/: 01_array_basic.cpp  02_array_2d.cpp  05_array_binary_search.cpp
AlgorithmsAndDataStructures/Recursion/: 04_recursion_indirect_recursion.cpp
AlgorithmsAndDataStructures/Sorting/: 01_insertion_sort.h  BUILD.bazel  utility.h
Cpp/: .bazelrc  WORKSPACE
Cpp/Concepts/: BUILD.bazel
Cpp/DesignPatterns/: BUILD.bazel  main.cpp
Cpp/Exercises/: 05_missing_element.h  06_frog_river.h  07_perm_check.h  10_spiral_table.h  utility.h
Cpp/OpenGL/: 00_triangle.cpp  01_cube.cpp
Cpp/TestingGround/: BUILD.bazel  pimpl.cpp  protobuf.cpp  (+2 more)
CppConcepts/: BUILD.bazel  array.cpp  friend_class.cpp  function_pointer.cpp  functor.cpp  operators.cpp
DesignPatterns/: main.cpp
Exercises/: 00_single_header.h  01_binary_gap.cpp  01_binary_gap.h  02_cyclic_rotation.h  03_odd_occurrences_in_array.h  04_frog_jump.h  08_passing_cars.h  09_rotate_numbers.h  BUILD.bazel  main.cpp
Go/: go.mod  main.go
Main/: 01_recursion.cpp  01_recursion_basic.cpp  06_recursion_sum_of_first_numbers.cpp  07_recursion_factorial.cpp  08_recursion_exponent.cpp  BUILD.bazel
OpenGL/: 00_triangle.cpp  BUILD.bazel  README.md
Rust/: Cargo.toml
TestingGround/: BUILD.bazel  memory_leak.cpp  protobuf.cpp  testing_ground.cpp  vectors.cpp
TestingGround/proto_lib/: example.proto
(+26 files in other folders)
